# memer

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: codeql-analysis.yml  dockerimage.yml
jenkins_files/: memer_bot.jenkins
memer/: lang.py  main.py
memer/templates/: index.html
