[tool.poetry]
name = "memer"
version = "0.1.0"
description = "Meme rotator project"
authors = ["Nickosh"]

[tool.poetry.dependencies]
python = "^3.7"
sanic = "^19.9"
sanic-jinja2 = "^0.7.5"
pyTelegramBotAPI = "^3.6"
tinydb = "^3.15"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
